# Autonomous-Ad-Intelligence-Network-AAIN-

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: run_pipeline.py  seed_campaigns.py  simulate_traffic.py
src/aain/: __init__.py  __main__.py  app.py  config.py  main.py
src/aain/api/: agents.py  economy.py  events.py  health.py  oversight.py  pipeline.py  router.py  websocket.py
src/aain/clusters/advertiser/: audience_expansion.py  bid_strategy.py  campaign_optimizer.py  supervisor.py
src/aain/clusters/creative/: asset_selection.py  dynamic_creative.py  (+2 more)
src/aain/core/: agent.py  blackboard.py  cluster.py  event_bus.py  events.py  pipeline.py  registry.py  supervisor.py  types.py
src/aain/economy/: budget_manager.py  internal_auction.py  reward_calculator.py  token_ledger.py
src/aain/llm/: base.py  claude.py  mock.py  openai.py
src/aain/models/: auction.py  campaign.py  creative.py  economy.py  events.py  intent.py  performance.py  placement.py  policy.py  reward.py
src/aain/storage/: base.py  memory.py  redis.py
src/aain/utils/: ids.py  logging.py  metrics.py
tests/: conftest.py
tests/benchmarks/: test_pipeline_latency.py
tests/cluster/: test_advertiser_cluster.py  test_creative_cluster.py  test_economic_cluster.py  test_intent_cluster.py  test_learning_cluster.py  test_placement_cluster.py  test_policy_cluster.py
tests/integration/: test_api.py  test_end_to_end_pipeline.py
tests/unit/: test_blackboard.py  test_economy.py  test_event_bus.py  test_llm_mock.py  test_models.py
(+18 files in other folders)
