[project]
name = "aain"
version = "0.1.0"
description = "Autonomous Ad Intelligence Network — Multi-agent ad decision system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "websockets>=12,<14",
    "orjson>=3.9,<4",
    "structlog>=24.1,<25",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
redis = ["redis[hiredis]>=5.0,<6"]
ml = ["numpy>=1.26,<3"]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<6",
    "httpx>=0.27,<1",
    "mypy>=1.8,<2",
    "ruff>=0.2,<1",
]

[project.scripts]
aain = "aain.main:cli"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
